lang/grammar/y.output

state 0
	$accept: .program $end 
	program: .    (2)

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  reduce 2 (src line 65)

	program  goto 1
	expr  goto 2
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  expr.    (1)
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	Pipe  shift 18
	LogOr  shift 20
	LogAnd  shift 19
	CmpEq  shift 25
	CmpNotEq  shift 26
	CmpGt  shift 27
	CmpGtOrEq  shift 28
	CmpLs  shift 29
	CmpLsOrEq  shift 30
	NumAdd  shift 21
	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 1 (src line 64)


state 3
	expr:  literal.    (3)

	.  reduce 3 (src line 67)


state 4
	expr:  selector.    (4)

	.  reduce 4 (src line 68)


state 5
	expr:  unary_operator.    (5)

	.  reduce 5 (src line 69)


state 6
	expr:  binary_operator.    (6)

	.  reduce 6 (src line 70)


state 7
	expr:  func_call.    (7)

	.  reduce 7 (src line 71)


state 8
	literal:  Bool.    (9)

	.  reduce 9 (src line 75)


state 9
	literal:  String.    (10)

	.  reduce 10 (src line 76)


state 10
	literal:  Int.    (11)

	.  reduce 11 (src line 77)


state 11
	literal:  Float.    (12)

	.  reduce 12 (src line 78)


state 12
	literal:  Null.    (13)

	.  reduce 13 (src line 79)


state 13
	selector:  Dot.    (14)
	selector:  Dot.Identifier sub_selector 
	selector:  Dot.LeftBracket RightBracket sub_selector 
	selector:  Dot.LeftBracket expr RightBracket sub_selector 
	selector:  Dot.LeftBracket expr Colon expr RightBracket sub_selector 
	selector:  Dot.LeftBracket Colon expr RightBracket sub_selector 
	selector:  Dot.LeftBracket expr Colon RightBracket sub_selector 

	LeftBracket  shift 32
	Identifier  shift 31
	.  reduce 14 (src line 82)


state 14
	unary_operator:  LogNot.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 33
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 15
	unary_operator:  LeftParens.unary_operator RightParens 
	binary_operator:  LeftParens.binary_operator RightParens 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 36
	literal  goto 3
	selector  goto 4
	unary_operator  goto 34
	binary_operator  goto 35
	func_call  goto 7

state 16
	binary_operator:  NumSub.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 37
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 17
	func_call:  Identifier.LeftParens args RightParens 
	func_call:  Identifier.    (45)

	LeftParens  shift 38
	.  reduce 45 (src line 119)


state 18
	expr:  expr Pipe.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 39
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 19
	binary_operator:  expr LogAnd.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 40
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 20
	binary_operator:  expr LogOr.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 41
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 21
	binary_operator:  expr NumAdd.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 42
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 22
	binary_operator:  expr NumSub.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 43
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 23
	binary_operator:  expr NumDiv.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 44
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 24
	binary_operator:  expr NumMul.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 45
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 25
	binary_operator:  expr CmpEq.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 46
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 26
	binary_operator:  expr CmpNotEq.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 47
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 27
	binary_operator:  expr CmpGt.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 48
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 28
	binary_operator:  expr CmpGtOrEq.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 49
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 29
	binary_operator:  expr CmpLs.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 50
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 30
	binary_operator:  expr CmpLsOrEq.expr 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 51
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 31
	selector:  Dot Identifier.sub_selector 
	sub_selector: .    (27)

	Dot  shift 53
	LeftBracket  shift 54
	.  reduce 27 (src line 96)

	sub_selector  goto 52

state 32
	selector:  Dot LeftBracket.RightBracket sub_selector 
	selector:  Dot LeftBracket.expr RightBracket sub_selector 
	selector:  Dot LeftBracket.expr Colon expr RightBracket sub_selector 
	selector:  Dot LeftBracket.Colon expr RightBracket sub_selector 
	selector:  Dot LeftBracket.expr Colon RightBracket sub_selector 

	Dot  shift 13
	RightBracket  shift 55
	LeftParens  shift 15
	Colon  shift 57
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 56
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 33
	expr:  expr.Pipe expr 
	unary_operator:  LogNot expr.    (28)
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	CmpEq  shift 25
	CmpNotEq  shift 26
	CmpGt  shift 27
	CmpGtOrEq  shift 28
	CmpLs  shift 29
	CmpLsOrEq  shift 30
	NumAdd  shift 21
	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 28 (src line 98)


state 34
	expr:  unary_operator.    (5)
	unary_operator:  LeftParens unary_operator.RightParens 

	RightParens  shift 58
	.  reduce 5 (src line 69)


state 35
	expr:  binary_operator.    (6)
	binary_operator:  LeftParens binary_operator.RightParens 

	RightParens  shift 59
	.  reduce 6 (src line 70)


state 36
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	Pipe  shift 18
	LogOr  shift 20
	LogAnd  shift 19
	CmpEq  shift 25
	CmpNotEq  shift 26
	CmpGt  shift 27
	CmpGtOrEq  shift 28
	CmpLs  shift 29
	CmpLsOrEq  shift 30
	NumAdd  shift 21
	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  error


state 37
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  NumSub expr.    (32)
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 32 (src line 104)


state 38
	func_call:  Identifier LeftParens.args RightParens 

	Dot  shift 13
	LeftParens  shift 15
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 61
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7
	args  goto 60

state 39
	expr:  expr.Pipe expr 
	expr:  expr Pipe expr.    (8)
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	Pipe  shift 18
	LogOr  shift 20
	LogAnd  shift 19
	CmpEq  shift 25
	CmpNotEq  shift 26
	CmpGt  shift 27
	CmpGtOrEq  shift 28
	CmpLs  shift 29
	CmpLsOrEq  shift 30
	NumAdd  shift 21
	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 8 (src line 72)


state 40
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr LogAnd expr.    (30)
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	CmpEq  shift 25
	CmpNotEq  shift 26
	CmpGt  shift 27
	CmpGtOrEq  shift 28
	CmpLs  shift 29
	CmpLsOrEq  shift 30
	NumAdd  shift 21
	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 30 (src line 102)


state 41
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr LogOr expr.    (31)
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	LogAnd  shift 19
	CmpEq  shift 25
	CmpNotEq  shift 26
	CmpGt  shift 27
	CmpGtOrEq  shift 28
	CmpLs  shift 29
	CmpLsOrEq  shift 30
	NumAdd  shift 21
	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 31 (src line 103)


state 42
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr NumAdd expr.    (33)
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 33 (src line 105)


state 43
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr NumSub expr.    (34)
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 34 (src line 106)


state 44
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr NumDiv expr.    (35)
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	.  reduce 35 (src line 107)


state 45
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr NumMul expr.    (36)
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	NumDiv  shift 23
	.  reduce 36 (src line 108)


state 46
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr CmpEq expr.    (37)
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	CmpEq  error
	CmpNotEq  error
	CmpGt  shift 27
	CmpGtOrEq  shift 28
	CmpLs  shift 29
	CmpLsOrEq  shift 30
	NumAdd  shift 21
	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 37 (src line 109)


state 47
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr CmpNotEq expr.    (38)
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	CmpEq  error
	CmpNotEq  error
	CmpGt  shift 27
	CmpGtOrEq  shift 28
	CmpLs  shift 29
	CmpLsOrEq  shift 30
	NumAdd  shift 21
	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 38 (src line 110)


state 48
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr CmpGt expr.    (39)
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	CmpGt  error
	CmpGtOrEq  error
	CmpLs  error
	CmpLsOrEq  error
	NumAdd  shift 21
	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 39 (src line 111)


state 49
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr CmpGtOrEq expr.    (40)
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 

	CmpGt  error
	CmpGtOrEq  error
	CmpLs  error
	CmpLsOrEq  error
	NumAdd  shift 21
	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 40 (src line 112)


state 50
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr CmpLs expr.    (41)
	binary_operator:  expr.CmpLsOrEq expr 

	CmpGt  error
	CmpGtOrEq  error
	CmpLs  error
	CmpLsOrEq  error
	NumAdd  shift 21
	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 41 (src line 113)


state 51
	expr:  expr.Pipe expr 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 
	binary_operator:  expr CmpLsOrEq expr.    (42)

	CmpGt  error
	CmpGtOrEq  error
	CmpLs  error
	CmpLsOrEq  error
	NumAdd  shift 21
	NumSub  shift 22
	NumMul  shift 24
	NumDiv  shift 23
	.  reduce 42 (src line 114)


state 52
	selector:  Dot Identifier sub_selector.    (15)

	.  reduce 15 (src line 83)


state 53
	sub_selector:  Dot.Identifier sub_selector 

	Identifier  shift 62
	.  error


state 54
	sub_selector:  LeftBracket.RightBracket sub_selector 
	sub_selector:  LeftBracket.expr RightBracket sub_selector 
	sub_selector:  LeftBracket.expr Colon expr RightBracket sub_selector 
	sub_selector:  LeftBracket.Colon expr RightBracket sub_selector 
	sub_selector:  LeftBracket.expr Colon RightBracket sub_selector 

	Dot  shift 13
	RightBracket  shift 63
	LeftParens  shift 15
	Colon  shift 65
	Null  shift 12
	Bool  shift 8
	Identifier  shift 17
	String  shift 9
	Int  shift 10
	Float  shift 11
	LogNot  shift 14
	NumSub  shift 16
	.  error

	expr  goto 64
	literal  goto 3
	selector  goto 4
	unary_operator  goto 5
	binary_operator  goto 6
	func_call  goto 7

state 55
	selector:  Dot LeftBracket RightBracket.sub_selector 
	sub_selector: .    (27)

	Dot  shift 53
	LeftBracket  shift 54
	.  reduce 27 (src line 96)

	sub_selector  goto 66

state 56
	expr:  expr.Pipe expr 
	selector:  Dot LeftBracket expr.RightBracket sub_selector 
	selector:  Dot LeftBracket expr.Colon expr RightBracket sub_selector 
	selector:  Dot LeftBracket expr.Colon RightBracket sub_selector 
	binary_operator:  expr.LogAnd expr 
	binary_operator:  expr.LogOr expr 
	binary_operator:  expr.NumAdd expr 
	binary_operator:  expr.NumSub expr 
	binary_operator:  expr.NumDiv expr 
	binary_operator:  expr.NumMul expr 
	binary_operator:  expr.CmpEq expr 
	binary_operator:  expr.CmpNotEq expr 
	binary_operator:  expr.CmpGt expr 
	binary_operator:  expr.CmpGtOrEq expr 
	binary_operator:  expr.CmpLs expr 
	binary_operator:  expr.CmpLsOrEq expr 
